# python-todotxt-graphql

./: .gitignore  auth.py  exceptions.py  extensions.py  mutations.py  pyproject.toml  queries.py  scalars.py  schema.graphql  todotxt_graphql.py  todotxt_graphql.wsgi  todotxt_graphql_wsgi.py  utils.py
data/: user_data_example.py
reference/: HEADERS.txt  commitAllTasks.txt  getModifiedAt.txt  getTask.txt  listTasks.txt
