[tool.poetry]
name = "todotxt_graphql"
version = "0.1.0"
description = ""
authors = ["Dano McKagan <flydanofly@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
ariadne = "^0.14.0"
pytodotxt = "^1.2.0"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
uvicorn = "^0.15.0"
gunicorn = "^20.1.0"
bpython = "^0.22.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
